<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/appBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_below="@+id/appBarLayout">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="280dp"
                android:layout_height="wrap_content">


            <EditText
                android:id="@+id/input_password"
                android:layout_width="244dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/Nome" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cognome" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="183dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cap" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="183dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/CittaResidenza" />

                </android.support.design.widget.TextInputLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/CodiceFiscale" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/planets_spinner"
                android:layout_marginLeft="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/NumerodiTelefono" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreditiConseguiti" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Annodicorso" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ScuolaSuperiore" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/AnnoDiploma" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="244dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/VotoDiploma" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/borse"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="25dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <Button
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="25dp"
                android:textColor="#FFFaFa"
                android:text="Conferma"
                android:id="@+id/bntconf"
                android:background="@drawable/prova1111"

                />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/bntannulla"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:background="@drawable/prova1111"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="25dp"
                android:textColor="#FFFaFa"
                android:layout_marginBottom="25dp"
                android:text="Annulla"/>





        </LinearLayout>

    </RelativeLayout>

</ScrollView>